force-app/main/default/objects/Opportunity/fields/Dimension_3__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3__c</fullName>
    <label>Dimension 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dimension_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACTH</fullName>
            </value>
            <value>
                <fullName>AFP</fullName>
            </value>
            <value>
                <fullName>Anatomical Pathology</fullName>
            </value>
            <value>
                <fullName>Anti-TG</fullName>
            </value>
            <value>
                <fullName>Anti-TPO</fullName>
            </value>
            <value>
                <fullName>Buffered Blood Bank Saline</fullName>
            </value>
            <value>
                <fullName>CA125II</fullName>
            </value>
            <value>
                <fullName>CA15-3</fullName>
            </value>
            <value>
                <fullName>CA19-9</fullName>
            </value>
            <value>
                <fullName>Calcitonin</fullName>
            </value>
            <value>
                <fullName>CEA</fullName>
            </value>
            <value>
                <fullName>Chromogranin A</fullName>
            </value>
            <value>
                <fullName>Clinical Chemistry</fullName>
            </value>
            <value>
                <fullName>Coagulation</fullName>
            </value>
            <value>
                <fullName>Copeptin pro-AVP</fullName>
            </value>
            <value>
                <fullName>CRPus</fullName>
            </value>
            <value>
                <fullName>CT-proAVP</fullName>
            </value>
            <value>
                <fullName>CT-proET1</fullName>
            </value>
            <value>
                <fullName>CYFRA21-1</fullName>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>Drugs of Abuse</fullName>
            </value>
            <value>
                <fullName>Fastscreen</fullName>
            </value>
            <value>
                <fullName>FBHCG</fullName>
            </value>
            <value>
                <fullName>free PSA</fullName>
            </value>
            <value>
                <fullName>fT3</fullName>
            </value>
            <value>
                <fullName>fT4</fullName>
            </value>
            <value>
                <fullName>Glucose Tolerance</fullName>
            </value>
            <value>
                <fullName>GTTB</fullName>
            </value>
            <value>
                <fullName>HCG+ß total</fullName>
            </value>
            <value>
                <fullName>Hematology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>