force-app/main/default/objects/Opportunity/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Avantor/VWR</fullName>
            </value>
            <value>
                <fullName>Cardinal (USA Only)</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
                <default>true</default>
                <label>Direct</label>
            </value>
            <value>
                <fullName>Fisher</fullName>
                <isActive>false</isActive>
                <label>Fisher</label>
            </value>
            <value>
                <fullName>Fisher (EU/ROW)</fullName>
            </value>
            <value>
                <fullName>Fisher HMD</fullName>
            </value>
            <value>
                <fullName>Fisher RSD</fullName>
            </value>
            <value>
                <fullName>Henry Schein</fullName>
            </value>
            <value>
                <fullName>HMD</fullName>
                <isActive>false</isActive>
                <label>HMD</label>
            </value>
            <value>
                <fullName>McKesson</fullName>
            </value>
            <value>
                <fullName>Medline</fullName>
            </value>
            <value>
                <fullName>Midland</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>