force-app/main/default/objects/Opportunity/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>[CDD NE Wave 1] The division of the user that creates the opportunity.</description>
    <formula>IF(
    Owner.Division == $Label.CDDName,
        $Label.CDDAccronym,
    IF(
        Owner.Division == $Label.IDDName,
            $Label.IDDAccronym,
    IF(
        Owner.Division == $Label.MBDName,
            $Label.MBDAccronym,
            &apos;&apos;
    )))</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>