force-app/main/default/objects/Opportunity/fields/Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>Documents_Required__c</fullName>
    <label>Documents Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Many</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>