force-app/main/default/objects/Opportunity/fields/DS_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>DS_Recommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommendation</label>
    <referenceTo>DS_Recommendation__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>