force-app/main/default/objects/Opportunity/fields/e_Ringi__c.field-meta.xml
<CustomField>
    <fullName>e_Ringi__c</fullName>
    <label>e-Ringi</label>
    <type>TextArea</type>
</CustomField>