force-app/main/default/objects/Opportunity/fields/Earliest_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Schedule_Date__c</fullName>
    <label>Earliest Schedule Date</label>
    <summarizedField>Revenue_Schedule__c.Revenue_Schedule_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Revenue_Schedule__c.Revenue_Schedule_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Revenue_Schedule__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>