force-app/main/default/objects/Opportunity/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[CDD nEM Wave 1] To track the end customer that’s purchasing through the Distributor.</description>
    <label>End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End Customer)</relationshipLabel>
    <relationshipName>End_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>