force-app/main/default/objects/Opportunity/fields/End_Date_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Contract__c</fullName>
    <description>[CDD NA Pilot] Last date of the multi year deal.  To track contract expiration dates for both close lost and close won opportunities/tenders.</description>
    <label>End Date of Contract</label>
    <type>Date</type>
</CustomField>