force-app/main/default/objects/Opportunity/fields/EquipmentConfiguration_List_Complete__c.field-meta.xml
<CustomField>
    <fullName>EquipmentConfiguration_List_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EquipmentConfiguration List Complete</label>
    <type>Checkbox</type>
</CustomField>