force-app/main/default/objects/Opportunity/fields/Estimated_Recurring_Annual_Profit__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Recurring_Annual_Profit__c</fullName>
    <description>[CDD NE Wave 1] Added as part of solution to track recurring revenue.  (Total profit amount for products where Annual Recurring Product is checked / Contract Length) * 12</description>
    <formula>IF(
   NOT(ISBLANK(Contract_Length_CAT__c)),
   Estimated_Recurring_Total_Profit__c /(Contract_Length_CAT__c/12),
   0
   )</formula>
    <label>Estimated Recurring Annual Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>