force-app/main/default/objects/Opportunity/fields/Estimated_Recurring_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Recurring_Monthly_Revenue__c</fullName>
    <description>[CDD NE Wave 1] Added as part of solution to track recurring revenue.  Estimated Recurring Total Revenue / Contract Length</description>
    <formula>IF(
  NOT(ISBLANK(Contract_Length_CAT__c)),
  Estimated_Recurring_Total_Revenue__c / Contract_Length_CAT__c,
  0
  )</formula>
    <label>Estimated Recurring Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>