force-app/main/default/objects/Opportunity/fields/Estimated_Recurring_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Recurring_Total_Revenue__c</fullName>
    <description>[CDD NE Wave 1] Added as part of solution to track recurring revenue.  Total Price of all products where Annual Recurring Product is checked</description>
    <label>Estimated Recurring Total Revenue</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Annual_Recurring_Product__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>