force-app/main/default/objects/Opportunity/fields/Evaluation_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Period_End_Date__c</fullName>
    <label>Evaluation Period End Date</label>
    <type>Date</type>
</CustomField>