force-app/main/default/objects/Opportunity/fields/Evaluation_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Period_Start_Date__c</fullName>
    <label>Evaluation Period Start Date</label>
    <type>Date</type>
</CustomField>