force-app/main/default/objects/Opportunity/fields/Existing_Annualized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Existing_Annualized_Revenue__c</fullName>
    <inlineHelpText>If Product Families of Interest is for NGS, provide current estimated 12 month revenue using existing TDX products.</inlineHelpText>
    <label>Existing Annualized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>