force-app/main/default/objects/Opportunity/fields/Existing_Product_Families_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Existing_Product_Families_of_Interest__c</fullName>
    <inlineHelpText>Current product family used.</inlineHelpText>
    <label>Existing Product Solution of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AB- FlowDSA-XM</fullName>
            </value>
            <value>
                <fullName>AB- FlowPRA</fullName>
            </value>
            <value>
                <fullName>AB- LabScreen</fullName>
            </value>
            <value>
                <fullName>AB- LAT</fullName>
            </value>
            <value>
                <fullName>AB- LCT</fullName>
            </value>
            <value>
                <fullName>AB- LS AutoAB</fullName>
            </value>
            <value>
                <fullName>AB- LS COVID+</fullName>
            </value>
            <value>
                <fullName>AB- LS ExPlex</fullName>
            </value>
            <value>
                <fullName>AB- LSM</fullName>
            </value>
            <value>
                <fullName>AB- LS Multi HNA</fullName>
            </value>
            <value>
                <fullName>AB- LS PRA</fullName>
            </value>
            <value>
                <fullName>AB- LS ReFlex</fullName>
            </value>
            <value>
                <fullName>AB- LS Single Antigen</fullName>
            </value>
            <value>
                <fullName>AB- Magsort</fullName>
            </value>
            <value>
                <fullName>Antibody</fullName>
            </value>
            <value>
                <fullName>BioPharma CDX</fullName>
            </value>
            <value>
                <fullName>BioPharma Svcs</fullName>
            </value>
            <value>
                <fullName>Blood Transfusion - Molecular, PCR</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>BT - ABO</fullName>
            </value>
            <value>
                <fullName>BT - HPA</fullName>
            </value>
            <value>
                <fullName>CDX</fullName>
            </value>
            <value>
                <fullName>Competitor-Antibody</fullName>
            </value>
            <value>
                <fullName>Competitor-Equipment</fullName>
            </value>
            <value>
                <fullName>Competitor-Molecular NGS</fullName>
            </value>
            <value>
                <fullName>Competitor-Molecular RT-PCR</fullName>
            </value>
            <value>
                <fullName>Competitor-Molecular SBT</fullName>
            </value>
            <value>
                <fullName>Competitor-Molecular SSO</fullName>
            </value>
            <value>
                <fullName>Competitor-Molecular SSP</fullName>
            </value>
            <value>
                <fullName>CXCL10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>