force-app/main/default/objects/Opportunity/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <description>[CDD nEM Wave 1] Track the expected delivery date of the order.</description>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>