force-app/main/default/objects/Opportunity/fields/Expected_Instrument_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Instrument_Ship_Date__c</fullName>
    <label>Instrument Ship Date</label>
    <type>Date</type>
</CustomField>