force-app/main/default/objects/Opportunity/fields/Finance_and_Legal_Updated__c.field-meta.xml
<CustomField>
    <fullName>Finance_and_Legal_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance and Legal Updated</label>
    <type>Checkbox</type>
</CustomField>