force-app/main/default/objects/Opportunity/fields/First_Year_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Amount__c</fullName>
    <formula>(Estimated_Recurring_Annual_Revenue__c /12 * (12- MONTH(Revenue_Start_Date__c) +1))+ One_Time_Revenue_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Year Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>