force-app/main/default/objects/Opportunity/fields/FoC_Approver__c.field-meta.xml
<CustomField>
    <fullName>FoC_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PDX Field</description>
    <label>FoC Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>