force-app/main/default/objects/Opportunity/fields/FoC_Kit_Approver_is_Me__c.field-meta.xml
<CustomField>
    <fullName>FoC_Kit_Approver_is_Me__c</fullName>
    <description>PDX Field</description>
    <formula>FoC_Approver__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FoC Kit Approver is Me</label>
    <type>Checkbox</type>
</CustomField>