force-app/main/default/objects/Opportunity/fields/FoC_Kit_List__c.field-meta.xml
<CustomField>
    <fullName>FoC_Kit_List__c</fullName>
    <label>FoC Kit List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assay 1</fullName>
            </value>
            <value>
                <fullName>Assay 2</fullName>
            </value>
            <value>
                <fullName>Assay 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>