force-app/main/default/objects/Opportunity/fields/FoC_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>FoC_Product_Name__c</fullName>
    <label>FoC Product Name</label>
    <type>TextArea</type>
</CustomField>