force-app/main/default/objects/Opportunity/fields/FoC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FoC_Quantity__c</fullName>
    <label>FoC Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>