force-app/main/default/objects/Opportunity/fields/FoC_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>FoC_Request_Date__c</fullName>
    <label>FoC Request Date</label>
    <type>Date</type>
</CustomField>