force-app/main/default/objects/Opportunity/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forecast</label>
    <type>Checkbox</type>
</CustomField>