force-app/main/default/objects/Opportunity/fields/Former_Brand_Cooperation_Date__c.field-meta.xml
<CustomField>
    <fullName>Former_Brand_Cooperation_Date__c</fullName>
    <label>Former Brand Cooperation Date</label>
    <type>Date</type>
</CustomField>