force-app/main/default/objects/Opportunity/fields/Funded__c.field-meta.xml
<CustomField>
    <fullName>Funded__c</fullName>
    <label>Funded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>