force-app/main/default/objects/Opportunity/fields/GPO_CAT__c.field-meta.xml
<CustomField>
    <fullName>GPO_CAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[CDD NA Pilot] Identify the GPO account that is linked to the opportunity</description>
    <label>GPO</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>GPO Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>