force-app/main/default/objects/Opportunity/fields/Growth_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>Growth_Click_ID__c</fullName>
    <label>Growth Click ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>