force-app/main/default/objects/Opportunity/fields/Growth_or_Trouble_mode__c.field-meta.xml
<CustomField>
    <fullName>Growth_or_Trouble_mode__c</fullName>
    <label>Growth or Trouble mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Match_Criteria</valueSetName>
    </valueSet>
</CustomField>