force-app/main/default/objects/Opportunity/fields/Hardware_purchase_method__c.field-meta.xml
<CustomField>
    <fullName>Hardware_purchase_method__c</fullName>
    <label>Hardware purchase method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital Purchase</fullName>
            </value>
            <value>
                <fullName>Reagent Rental</fullName>
            </value>
            <value>
                <fullName>Hardware Rental</fullName>
            </value>
            <value>
                <fullName>Sale Type Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>