force-app/main/default/objects/Opportunity/fields/Have_a_coach_es_in_the_account__c.field-meta.xml
<CustomField>
    <fullName>Have_a_coach_es_in_the_account__c</fullName>
    <label>Have a coach(es) in the account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Match_Criteria</valueSetName>
    </valueSet>
</CustomField>