force-app/main/default/objects/Opportunity/fields/High_Potential_Protein_Volume__c.field-meta.xml
<CustomField>
    <fullName>High_Potential_Protein_Volume__c</fullName>
    <label>High Potential Protein Volume</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Match_Criteria</valueSetName>
    </valueSet>
</CustomField>