force-app/main/default/objects/Opportunity/fields/Hospital_Department__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Department__c</fullName>
    <label>(Hospital) Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>