force-app/main/default/objects/Opportunity/fields/IDD_EU_Count_of_products__c.field-meta.xml
<CustomField>
    <fullName>IDD_EU_Count_of_products__c</fullName>
    <description>IDD EU Count of products</description>
    <label>IDD EU Count of products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>