force-app/main/default/objects/Opportunity/fields/IDD_Health_System_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>IDD_Health_System_Opportunity__c</fullName>
    <label>IDD Health System Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile Optimization</fullName>
            </value>
            <value>
                <fullName>Components</fullName>
            </value>
            <value>
                <fullName>Autoimmune</fullName>
            </value>
            <value>
                <fullName>Gluten Related Disorders</fullName>
            </value>
            <value>
                <fullName>Antibiotic Stewardship</fullName>
            </value>
            <value>
                <fullName>Asthma Pathway</fullName>
            </value>
            <value>
                <fullName>COPD</fullName>
            </value>
            <value>
                <fullName>ACOS</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Lab Outreach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>