force-app/main/default/objects/Opportunity/fields/IDD_Region__c.field-meta.xml
<CustomField>
    <fullName>IDD_Region__c</fullName>
    <label>IDD Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>