force-app/main/default/objects/Opportunity/fields/IFSCode__c.field-meta.xml
<CustomField>
    <fullName>IFSCode__c</fullName>
    <externalId>true</externalId>
    <label>IFS Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>