force-app/main/default/objects/Opportunity/fields/In_Forecast__c.field-meta.xml
<CustomField>
    <fullName>In_Forecast__c</fullName>
    <label>In Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>