force-app/main/default/objects/Opportunity/fields/In_Hospital_Price__c.field-meta.xml
<CustomField>
    <fullName>In_Hospital_Price__c</fullName>
    <label>In Hospital Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>