force-app/main/default/objects/Opportunity/fields/Include_to_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Include_to_Funnel__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Ability to exclude the Opportunity from the funnel. It is used to identify duplicate opps with shared opportunities across business units.</description>
    <label>Include to Funnel</label>
    <type>Checkbox</type>
</CustomField>