force-app/main/default/objects/Opportunity/fields/Includes_Hardwares__c.field-meta.xml
<CustomField>
    <fullName>Includes_Hardwares__c</fullName>
    <label>Includes NEW Hardware (not refurb)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - New</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Refurbished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>