force-app/main/default/objects/Opportunity/fields/Indication__c.field-meta.xml
<CustomField>
    <fullName>Indication__c</fullName>
    <label>Indication</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lab_or_Clinical__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anastomic leaks</fullName>
            </value>
            <value>
                <fullName>Antibiotic duration</fullName>
            </value>
            <value>
                <fullName>Bowel obstruction/ischemy</fullName>
            </value>
            <value>
                <fullName>Diverticulitis</fullName>
            </value>
            <value>
                <fullName>Early onset neonatal sepsis</fullName>
            </value>
            <value>
                <fullName>Heart failure patient management</fullName>
            </value>
            <value>
                <fullName>Late onset neonatal sepsis</fullName>
            </value>
            <value>
                <fullName>Lower respiratory tract Infection</fullName>
            </value>
            <value>
                <fullName>Myocardial infarction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PE diagnostic</fullName>
            </value>
            <value>
                <fullName>PE prognostic</fullName>
            </value>
            <value>
                <fullName>PE screening</fullName>
            </value>
            <value>
                <fullName>Risk stratification</fullName>
            </value>
            <value>
                <fullName>Sepsis diagnostic</fullName>
            </value>
            <value>
                <fullName>Sepsis monitoring</fullName>
            </value>
            <value>
                <fullName>Urinary infection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>