force-app/main/default/objects/Opportunity/fields/Indiko_ISE_Qty__c.field-meta.xml
<CustomField>
    <fullName>Indiko_ISE_Qty__c</fullName>
    <label>Indiko ISE (Qty)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>