force-app/main/default/objects/Opportunity/fields/Initial_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Initial_Order_Value__c</fullName>
    <description>MBD SCTASK1521476 Requested for a value field to show the value of the customer&apos;s initial order</description>
    <label>Initial Order Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>