force-app/main/default/objects/Opportunity/fields/Initial_Quote_Issued__c.field-meta.xml
<CustomField>
    <fullName>Initial_Quote_Issued__c</fullName>
    <label>Initial Quote Issued</label>
    <type>Date</type>
</CustomField>