force-app/main/default/objects/Opportunity/fields/Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Installation_Status__c</fullName>
    <label>Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>in progress</fullName>
            </value>
            <value>
                <fullName>Won, but not installed yet</fullName>
            </value>
            <value>
                <fullName>Installed, not enabled</fullName>
            </value>
            <value>
                <fullName>Installed, enabled</fullName>
            </value>
            <value>
                <fullName>Order lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>