force-app/main/default/objects/Opportunity/fields/Instrument_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Instrument_PO_Date__c</fullName>
    <label>Instrument PO Date</label>
    <type>Date</type>
</CustomField>