force-app/main/default/objects/Opportunity/fields/Instruments_Product__c.field-meta.xml
<CustomField>
    <fullName>Instruments_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Updates from opportunity  line item</inlineHelpText>
    <label>Instruments Product</label>
    <type>Checkbox</type>
</CustomField>