force-app/main/default/objects/Opportunity/fields/Internal_Resource_Support_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Resource_Support_Date__c</fullName>
    <label>Internal Resource Support Date</label>
    <type>Date</type>
</CustomField>