force-app/main/default/objects/Opportunity/fields/IPortal_Enabled_Product__c.field-meta.xml
<CustomField>
    <fullName>IPortal_Enabled_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IPortal Enabled Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>